--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      // Auto-redirect to hash router if no hash present
+      if (window.location.hash === '' && window.location.pathname.endsWith('/portfolio/')) {
+        window.location.hash = '#/';
+      }
+    </script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
